syntax = "proto3";
package customer;
option go_package = "com.github/qcodelabsllc/piggybank;ms";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


service CustomerService {
  rpc create_customer(Customer) returns (google.protobuf.StringValue);
  rpc get_customer(google.protobuf.StringValue) returns (Customer);
  rpc get_customer_by_username(google.protobuf.StringValue) returns (Customer);
  rpc update_customer(Customer) returns (google.protobuf.Empty);
  rpc delete_customer(google.protobuf.StringValue) returns (google.protobuf.Empty);
  rpc GetCurrentCustomer(google.protobuf.Empty) returns (stream Customer);
}

message Customer {
  string id = 1;
  string display_name = 2;
  string username = 3;
  optional string phone = 4;
  optional string avatar = 5;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
